--- a/app/src/main/res/layout/activity_insert_class.xml
+++ b/app/src/main/res/layout/activity_insert_class.xml
@@ -26,7 +26,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:textAlignment="center"
-        android:id="@+id/editText"
+        android:id="@+id/classText"
         tools:text="CECS 229" />
 
     <Button
