--- a/app/src/main/res/layout/activity_class__info.xml
+++ b/app/src/main/res/layout/activity_class__info.xml
@@ -11,6 +11,42 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.josef.passnopass.Class_Info">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:layout_height="match_parent"
+        android:weightSum="1">
+
+        <TextView
+            android:text="Grades"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="69dp"
+            android:layout_marginStart="69dp"
+            android:id="@+id/textView"
+            android:layout_weight="0.24" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="374dp"
+            android:id="@+id/work"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="0.24" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/total_grade"
+            android:textAlignment="center"
+            android:layout_weight="0.35" />
+    </LinearLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,12 +56,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/floatingActionButton" />
+        android:id="@+id/floatClass" />
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/work" />
+
 </RelativeLayout>
