--- a/app/src/main/res/layout/activity_insert_class.xml
+++ b/app/src/main/res/layout/activity_insert_class.xml
@@ -13,7 +13,7 @@
     android:weightSum="1">
 
     <TextView
-        android:text="Class Name"
+        android:text="Class Name Ex: CECS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -27,7 +27,25 @@
         android:ems="10"
         android:textAlignment="center"
         android:id="@+id/classText"
-        tools:text="CECS 229" />
+        tools:text="CECS" />
+
+    <TextView
+        android:text="Class Num Ex: 229"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/courseNumText"
+        android:textAlignment="center"
+        android:layout_weight="0.09" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/courseNumE"
+        android:textAlignment="center"
+        android:layout_weight="0.06"
+        tools:text="229" />
 
     <Button
         android:text="Add Class"
