--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -23,19 +23,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
-            android:text="Forgot Password?"
+            android:text="@string/lbl_forgot_password"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_horizontal"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:text="We just need your registered Email Id to sent you password reset instructions"
-            android:textColor="@android:color/white"
-            android:textSize="14dp" />
+        
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -47,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="20dp"
-                android:hint="Enter Email"
+                android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white" />
@@ -61,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
             android:background="@color/colorAccent"
-            android:text="Reset Password"
+            android:text="@string/btn_reset_password"
             android:textColor="@android:color/black" />
 
         <Button
@@ -70,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@null"
-            android:text="Go Back"
+            android:text="@string/btn_back"
             android:textColor="@color/colorAccent" />
 
     </LinearLayout>
